--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=""
-RESENT_API_KEY="re_VaGNQuQY_NHSYohScdtcApZJHsUXodEyY"
+RESENT_API_KEY="re_VaGNQuQY_NHSYohScdtcApZJHsUXodEyY"\
+NEXTAUTH_SECRET=""
