--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=""
-RESENT_API_KEY="re_VaGNQuQY_NHSYohScdtcApZJHsUXodEyY"\
+MONGODB_URI="mongodb+srv://nikhilrathore986:Mosin98@cluster0.okmnhkr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+RESEND_API_KEY="re_VaGNQuQY_NHSYohScdtcApZJHsUXodEyY"
 NEXTAUTH_SECRET=""
