--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-MONGODB_URI=""
-RESEND_API_KEY=""
+MONGODB_URI="mongodb+srv://nikhilrathore986:Mosin98@cluster0.okmnhkr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+RESEND_API_KEY="re_VaGNQuQY_NHSYohScdtcApZJHsUXodEyY"
 NEXTAUTH_SECRET=""
+OPENAI_API_KEY = "sk-OG6dAGspnzhC1grSY3IVmWu1fwAzEPPJ5sMhIPSZ2HT3BlbkFJXGvqIL_r-OnuZ5nI5yJHkucsMUI9ARgu4g0RbmXScA"
