--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.53",
     "@react-email/components": "^0.0.22",
+    "ai": "^3.3.17",
     "bcryptjs": "^2.4.3",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
+    "openai": "^4.56.0",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^2.1.6",
