--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@react-email/components": "^0.0.22",
     "ai": "^3.3.17",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.435.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
@@ -22,6 +25,8 @@
     "react-dom": "^18",
     "react-email": "^2.1.6",
     "resend": "^4.0.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
