--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lucide-react": "^0.435.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
-    "next": "14.2.5",
+    "next": "^14.2.7",
     "next-auth": "^4.24.7",
     "openai": "^4.56.0",
     "react": "^18",
